@@ -168,6 +168,7 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
 
       Function             | Replacement
       ---------------------|------------------
+      is_figure            | isfigure
       is_hghandle          | ishghandle
 
 ---------------------------------------------------------
